--- a/eda/BMBF eda.ipynb
+++ b/eda/BMBF eda.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c14f98a6",
+   "id": "1a7ad815",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f9d8182b",
+   "id": "e78d4eeb",
    "metadata": {},
    "outputs": [
     {
@@ -33,9 +33,9 @@
    ],
    "source": [
     "import nltk\n",
-    "nltk.download('stopwords')\n",
+    "#nltk.download('stopwords')\n",
     "from nltk.corpus import stopwords\n",
-    "nltk.download('punkt')\n",
+    "#nltk.download('punkt')\n",
     "from nltk.stem.snowball import SnowballStemmer\n",
     "from nltk.tokenize import word_tokenize\n",
     "\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "962e974a",
+   "id": "0d64c472",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dddc3660",
+   "id": "44fddc1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5910f2be",
+   "id": "21cf4806",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "2787b2cc",
+   "id": "5e3d0621",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "325896c7",
+   "id": "3b5079e3",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0fa89f2a",
+   "id": "4289b559",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33d2d556",
+   "id": "d285ff27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "bcd67e03",
+   "id": "07a4f200",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6941da76",
+   "id": "ce1c11cc",
    "metadata": {},
    "outputs": [],
    "source": []
