--- a/eda/newsapi_data_enrichment (2. notebook).ipynb
+++ b/eda/newsapi_data_enrichment (2. notebook).ipynb
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cb1eca50",
+   "id": "3f92007b",
    "metadata": {},
    "outputs": [
     {
@@ -39,12 +39,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0922753d",
+   "id": "53fdfed7",
    "metadata": {},
    "outputs": [],
    "source": [
     "api_key = \"d32a3666e0d046dd88c4e09bc5ae3b68\"\n",
-    "url = f'https://newsapi.org/v2/everything?q=%s&language=de&apiKey={api_key}'\n",
+    "lang = \"de\"\n",
+    "# everything endpoint url\n",
+    "everything_url = f'https://newsapi.org/v2/everything?q=%s&language={lang}&apiKey={api_key}'\n",
     "\n",
     "search_keywords = [ \"BMBF\",\"BMWi\",\"BMU\",\"BMVI\",\"BMEL\",\\\n",
     "                    \"Bundesministerium für Bildung und Forschung\",\\\n",
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a294e1e3",
+   "id": "a6d1d9b2",
    "metadata": {},
    "source": [
     "### making test request to examine the structure of the response"
@@ -67,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6a90a888",
+   "id": "27b29797",
    "metadata": {},
    "outputs": [
     {
@@ -388,6 +390,25 @@
       "                        'Forschungspräsenz in Singapur',\n",
       "               'url': 'https://www.stern.de/gesellschaft/regional/niedersachsen-bremen/forschung--uni-braunschweig-mit-neuer-forschungspraesenz-in-singapur--33964478.html',\n",
       "               'urlToImage': 'https://image.stern.de/6681672/t/31/v5/w1440/r1.7778/-/video-fallback-image.jpg'},\n",
+      "              {'author': 'B.Nebur',\n",
+      "               'content': 'Die Martin-Luther-Universität Halle-Wittenberg '\n",
+      "                          '(MLU) vergibt zum Wintersemester 98 '\n",
+      "                          'Deutschlandstipendien an sehr gute und engagierte '\n",
+      "                          'Studierende. Diese werden von insgesamt 65 '\n",
+      "                          'Stifterinnen und Stifte… [+1674 chars]',\n",
+      "               'description': 'Die Martin-Luther-Universität Halle-Wittenberg '\n",
+      "                              '(MLU) vergibt zum Wintersemester 98 '\n",
+      "                              'Deutschlandstipendien an sehr gute und '\n",
+      "                              'engagierte Studierende. Diese werden von '\n",
+      "                              'insgesamt 65 Stifterinnen und Stiftern '\n",
+      "                              'gefördert. Die feierliche Übergabe der '\n",
+      "                              'Stipendienurkunden…',\n",
+      "               'publishedAt': '2023-11-17T12:10:22Z',\n",
+      "               'source': {'id': None, 'name': 'Hallespektrum.de'},\n",
+      "               'title': 'Neue Deutschlandstipendien für Studierende der Uni '\n",
+      "                        'Halle',\n",
+      "               'url': 'https://hallespektrum.de/nachrichten/bildung/neue-deutschlandstipendien-fuer-studierende-der-uni-halle/442479/',\n",
+      "               'urlToImage': 'https://hallespektrum.de/wp-content/uploads/2023/10/MLU-Loewen.jpg'},\n",
       "              {'author': 'Eva Bauer',\n",
       "               'content': 'Bildungsmaterialien sollen über offenen Lizenzen '\n",
       "                          'für alle verfügbar gemacht werden. Die Universität '\n",
@@ -496,18 +517,18 @@
       "               'url': 'https://imsalon.de/business/business-detailseite/mindestausbildungsverguetung-steigt-2024-auf-649-eur/',\n",
       "               'urlToImage': 'https://imsalon.de/typo3temp/assets/images/csm_Ausbildungsmindestverguetung-2024-AdobeStock_443660956-c-Asier_d874711977_csm_imSalon_Logo_weiss_7ec198caf1c68049ed1cda1497deb8af.jpg'}],\n",
       " 'status': 'ok',\n",
-      " 'totalResults': 25}\n"
+      " 'totalResults': 26}\n"
      ]
     }
    ],
    "source": [
-    "response = requests.get(url%\"Bundesministerium für Bildung und Forschung\")\n",
+    "response = requests.get(everything_url%\"Bundesministerium für Bildung und Forschung\")\n",
     "pprint(response.json())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d84a4f11",
+   "id": "efea51fc",
    "metadata": {},
    "source": [
     "### making request for keywords related to our BMBF Ressort and their full form"
@@ -516,20 +537,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5ea06d37",
+   "id": "f1c7a87c",
    "metadata": {},
    "outputs": [],
    "source": [
     "responses = dict()\n",
     "for keyword in search_keywords:\n",
     "    \n",
-    "    res = requests.get(url%keyword)\n",
+    "    res = requests.get(everything_url%keyword)\n",
     "    responses[keyword] = res.json()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "99b65485",
+   "id": "13a46af0",
    "metadata": {},
    "source": [
     "### create a dataframe from data retrieved "
@@ -537,8 +558,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "90cdc026",
+   "execution_count": 6,
+   "id": "7cdebce0",
    "metadata": {},
    "outputs": [
     {
@@ -638,21 +659,21 @@
        "4                                                  Gedruckte Energiespeicher fürs Handgelenk  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tup = [(key,art[\"content\"],art[\"description\"],art[\"title\"]) for key in responses for art in responses[key][\"articles\"]]\n",
-    "newsAPI_enrihment = pd.DataFrame(tup,columns=[\"keyword\",\"content\",\"description\",\"title\"])\n",
-    "newsAPI_enrihment.head(5)"
+    "newsAPI_enrichment = pd.DataFrame(tup,columns=[\"keyword\",\"content\",\"description\",\"title\"])\n",
+    "newsAPI_enrichment.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "589ec45a",
+   "execution_count": 7,
+   "id": "6e27e63d",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +681,7 @@
       "text/plain": [
        "keyword\n",
        "BMU                                                         36\n",
-       "Bundesministerium für Bildung und Forschung                 25\n",
+       "Bundesministerium für Bildung und Forschung                 26\n",
        "BMBF                                                        21\n",
        "BMEL                                                        12\n",
        "Bundesministerium für Ernährung und Landwirtschaft          10\n",
@@ -670,52 +691,52 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "newsAPI_enrihment[\"keyword\"].value_counts()"
+    "newsAPI_enrichment[\"keyword\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3ce450dc",
+   "execution_count": 8,
+   "id": "22973692",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(111, 4)"
+       "(112, 4)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "newsAPI_enrihment.shape"
+    "newsAPI_enrichment.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "20bda75d",
+   "execution_count": 9,
+   "id": "ebd6c65d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "newsAPI_enrihment[\"total_content\"] =  newsAPI_enrihment[\"content\"] \\\n",
-    "                                    + newsAPI_enrihment[\"description\"] \\\n",
-    "                                    + newsAPI_enrihment[\"title\"]"
+    "newsAPI_enrichment[\"total_content\"] =  newsAPI_enrichment[\"content\"] \\\n",
+    "                                    + newsAPI_enrichment[\"description\"] \\\n",
+    "                                    + newsAPI_enrichment[\"title\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f4673ecd",
+   "execution_count": 10,
+   "id": "86444eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11640787",
+   "id": "78138802",
    "metadata": {},
    "source": [
     "### check whether the titles of data fetched and BMBF grant topics are overlapped"
@@ -732,8 +753,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "708c5602",
+   "execution_count": 11,
+   "id": "000f76a9",
    "metadata": {},
    "outputs": [
     {
@@ -742,18 +763,18 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(set(BMBF[\"Thema\"]).intersection(set(newsAPI_enrihment[\"title\"])))"
+    "len(set(BMBF[\"Thema\"]).intersection(set(newsAPI_enrichment[\"title\"])))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fc61aa53",
+   "id": "f4561205",
    "metadata": {},
    "source": [
     "### traverse through every FKZ to determine which one is mentioned in the NewsAPI data retrieved"
@@ -761,8 +782,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f051e78d",
+   "execution_count": 12,
+   "id": "7fb956ff",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +798,7 @@
     "FKZs_found = []\n",
     "for Res in BMBF[\"Ressort\"].unique():\n",
     "    for FKZ in BMBF.loc[BMBF[\"Ressort\"]==Res,\"FKZ\"]:\n",
-    "        if FKZ in \" \".join(newsAPI_enrihment[\"total_content\"]):\n",
+    "        if FKZ in \" \".join(newsAPI_enrichment[\"total_content\"]):\n",
     "            FKZs_found.append(FKZ)\n",
     "        else: continue\n",
     "print(len(FKZs_found))"
@@ -785,7 +806,156 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f0a9408",
+   "id": "1f54356d",
+   "metadata": {},
+   "source": [
+    "### the top-headlines endpoint does not find any publication/ press release associated with our search keywords, too."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "43d244f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BMBF</th>\n",
+       "      <th>BMWi</th>\n",
+       "      <th>BMU</th>\n",
+       "      <th>BMVI</th>\n",
+       "      <th>BMEL</th>\n",
+       "      <th>Bundesministerium für Bildung und Forschung</th>\n",
+       "      <th>Bundesministerium für Wirtschaft und Technologie</th>\n",
+       "      <th>Bundesministerium für Umwelt, Naturschutz, nukleare Sicherheit</th>\n",
+       "      <th>Bundesministerium für Verkehr und Digitale Infrastruktur</th>\n",
+       "      <th>Bundesministerium für Ernährung und Landwirtschaft</th>\n",
+       "      <th>Bundesministerium der Justiz und für Verbraucherschutz</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>status</th>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>ok</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>totalResults</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>articles</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             BMBF BMWi BMU BMVI BMEL  \\\n",
+       "status         ok   ok  ok   ok   ok   \n",
+       "totalResults    0    0   0    0    0   \n",
+       "articles       []   []  []   []   []   \n",
+       "\n",
+       "             Bundesministerium für Bildung und Forschung  \\\n",
+       "status                                                ok   \n",
+       "totalResults                                           0   \n",
+       "articles                                              []   \n",
+       "\n",
+       "             Bundesministerium für Wirtschaft und Technologie  \\\n",
+       "status                                                     ok   \n",
+       "totalResults                                                0   \n",
+       "articles                                                   []   \n",
+       "\n",
+       "             Bundesministerium für Umwelt, Naturschutz, nukleare Sicherheit  \\\n",
+       "status                                                                   ok   \n",
+       "totalResults                                                              0   \n",
+       "articles                                                                 []   \n",
+       "\n",
+       "             Bundesministerium für Verkehr und Digitale Infrastruktur  \\\n",
+       "status                                                             ok   \n",
+       "totalResults                                                        0   \n",
+       "articles                                                           []   \n",
+       "\n",
+       "             Bundesministerium für Ernährung und Landwirtschaft  \\\n",
+       "status                                                       ok   \n",
+       "totalResults                                                  0   \n",
+       "articles                                                     []   \n",
+       "\n",
+       "             Bundesministerium der Justiz und für Verbraucherschutz  \n",
+       "status                                                           ok  \n",
+       "totalResults                                                      0  \n",
+       "articles                                                         []  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# top-headlines endpoint url\n",
+    "headlines_url= f\"https://newsapi.org/v2/top-headlines?q=%s&apiKey={api_key}\"\n",
+    "headlines_responses = dict()\n",
+    "for keyword in search_keywords:\n",
+    "    \n",
+    "    res = requests.get(headlines_url%keyword)\n",
+    "    headlines_responses[keyword] = res.json()\n",
+    "\n",
+    "pd.DataFrame().from_dict(headlines_responses).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51a97196",
    "metadata": {},
    "source": [
     "## In the data provided by NewsAPI, there is no overlap in either the titles or grant identifiers. Conclusion: NewsAPI with its free subscription is not suitable for enriching data for our BMBF dataset "
@@ -794,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f80a19e",
+   "id": "7b961717",
    "metadata": {},
    "outputs": [],
    "source": []
