--- a/eda/crossref_metadata_enrichment (3. notebook).ipynb
+++ b/eda/crossref_metadata_enrichment (3. notebook).ipynb
@@ -1220,8 +1220,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "8612ecaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LANG\n",
+       "en     45465\n",
+       "NaN     6157\n",
+       "de       325\n",
+       "es         3\n",
+       "fr         1\n",
+       "ru         1\n",
+       "pl         1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crossref_abstract[\"LANG\"].value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a08ed595",
+   "id": "ce4b5254",
    "metadata": {},
    "outputs": [],
    "source": []
